Revert "Install libertined as systemd unit. Fixes: https://bugs.launchpad.net/bugs/1679228."
This reverts commit 58a7d7697baf138d78da795b621b04a0aa7d70fc.

--- a/data/com.canonical.libertine.Service.service
+++ b/data/com.canonical.libertine.Service.service
@@ -1,4 +1,3 @@
 [D-BUS Service]
 Name=com.canonical.libertine.Service
-Exec=/usr/bin/libertined
-SystemdService=libertine.service
+Exec=/usr/bin/libertined --cache-output
