Add Upstart job to remove Libertine scope click
The unity8-dash uses a scope installed from a click before it will use
one from a deb whether or not the deb version is newer. Unfortunately,
users who have installed the Libertine scope while it was a click will
be stuck with it when they upgrade to 16.04. This commit adds an Upstart
job which checks if the libertine-scope.ubuntu click is installed, then
removes it if it is.

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -4,7 +4,7 @@ install(FILES libertine-manager-app.desktop
         DESTINATION ${CMAKE_INSTALL_DATADIR}/applications)
 install(FILES libertine_64.png libertine-lxc.conf
   DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME})
-install(FILES libertine-xmir.conf
+install(FILES libertine-xmir.conf replace-libertine-scope.conf
         DESTINATION ${CMAKE_INSTALL_DATADIR}/upstart/sessions)
 install(FILES libertine-lxc-sudo libertine-lxd-sudo
         DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/sudoers.d)
